reverting to old template

--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,16 @@
 
 title: Separate Strings
 description:  "Single String Processing = Poly-Processing (so far called Hexaphonic or Polyphonic Guitars)"
-logo: # 120x120 px default image used for Twitter summary card
-teaser: # 400x250 px default teaser image used in image archive grid
-locale:
-url:
+logo: 120x120.gif
+teaser: 400x250.gif
+locale: en_US
+url: //separate-strings.github.io/
 
 # Jekyll configuration
 
 sass:
-    sass_dir: _sass
-    style: compressed
+  sass_dir: _sass
+  style: compressed
 permalink: /:categories/:title/
 kramdown:
   toc_levels: 1..2
@@ -22,14 +22,16 @@ gems:
 
 # Site owner
 owner:
-  name:
-  email:
-  twitter:
-  google:
-    ad-client: 
-    ad-slot: 
-  bio: 
+  name: Matthias Grob
+  web: http://separate-strings.org
+  email: help@separate-strings.org
+  twitter: separate-strings
+  bio: "Single String Processing."
   avatar: bio-photo.jpg # 160x160 px image for author byline
+  google:
+    plus:
+    ad-client: #ca-pub-7328585512091257
+    ad-slot: #3049671934
   disqus-shortname:
 
 
