--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:  "Single String Processing = Poly-Processing (so far called Hexapho
 logo: 120x120.gif
 teaser: 400x250.gif
 locale: en_US
-url: //separate-strings.github.io/
+url: //separate-strings.github.io
 
 # Jekyll configuration
 
