Updating pages and navigation

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,8 +3,8 @@
 - title: Home
   url: /
 
-- title: Getting Started
-  url: /getting-started/
+- title: Music
+  url: /music/
 
 - title: About
   url: /about/
