Adding photos and content

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 title: Separate Strings
 description:  "Single String Processing = Poly-Processing (so far called Hexaphonic or Polyphonic Guitars)"
-logo: 120x120.gif
-teaser: 400x250.gif
+logo: synth.jpg
+teaser: light_synth.jpg
 locale: en_US
 url: //separate-strings.github.io
 
