editing some authors

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,20 +1,20 @@
 # Authors
 
-billy_rick:
-  name: Billy Rick
-  web: http://thewhip.com
-  email: billy@rick.com
+moenika:
+  name: Moenika Chowdhury
+  web: 
+  email: moenika@gmail.com
   bio: "What do you want, jewels? I am a very extravagant man."
   avatar: bio-photo.jpg
   twitter: extravagantman
   google:
-    plus: +BillyRick
+    plus: 
 
 cornelius_fiddlebone:
-  name: Cornelius Fiddlebone
-  email: cornelius@thewhip.com
-  bio: "I ordered what?"
+  name: Ricky Graham
+  email: rgraham@stevens.edu
+  bio: 
   avatar: bio-photo.jpg
-  twitter: rhymeswithsackit
+  twitter: 
   google:
-    plus: +CorneliusFiddlebone
+    plus: 
