additional content updates

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,9 +4,9 @@ moenika:
   name: Moenika Chowdhury
   web: 
   email: moenika@gmail.com
-  bio: "What do you want, jewels? I am a very extravagant man."
+  bio: 
   avatar: bio-photo.jpg
-  twitter: extravagantman
+  twitter: 
   google:
     plus: 
 
