changing nav + new image

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@
   excerpt: "A directory of sounds."
   image: synth.jpg
 
-- title: Gear
-  url: /gear/
+- title: Articles
+  url: /articles/
   excerpt: "Where to get the tools."
   image: plugs.jpg
 
