Deleting sliding right navigation and formatting the header and footer the same.

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -6,8 +6,19 @@
 - title: Music
   url: /music/
 
+- title: Articles
+  url: /articles/
+
+- title: Media
+  url: /media/
+
+- title: History
+  url: /history/
+
 - title: About
   url: /about/
 
 - title: Terms
   url: /terms/
+
+-title: Site Designed by Moenika Chowdhury
